--- a/100-pandas-puzzles.ipynb
+++ b/100-pandas-puzzles.ipynb
@@ -41,12 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,7 +64,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "pd.__version__"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,7 +82,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "pd.show_versions()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1466,7 +1472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
