--- a/100-pandas-puzzles.ipynb
+++ b/100-pandas-puzzles.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -133,7 +133,7 @@
     "\n",
     "labels = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
     "\n",
-    "df = # (complete this line of code)"
+    "df = pd.DataFrame(data, index=labels)"
    ]
   },
   {
@@ -150,7 +150,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df.describe()\n",
+    "#df.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -166,7 +169,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df.head(3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,7 +187,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df[['animal', 'age']]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -198,7 +205,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df.loc[df.index[[3, 4, 8]], ['animal', 'age']]"
+   ]
   },
   {
    "cell_type": "markdown",
