--- a/100-pandas-puzzles.ipynb
+++ b/100-pandas-puzzles.ipynb
@@ -223,7 +223,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df[df['visits'] > 3]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -239,7 +241,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df[df['age'].isnull()]"
+   ]
   },
   {
    "cell_type": "markdown",
