--- a/100-pandas-puzzles.ipynb
+++ b/100-pandas-puzzles.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -259,7 +259,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df[(df['animal'] == 'cat') & (df['age'] < 3)]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -275,7 +277,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df[df['age'].between(2,4)]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -291,7 +295,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df.loc['f', 'age'] = 1.5\n",
+    "df.loc['f', 'age']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -307,7 +314,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df.visits.sum()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -323,7 +332,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df.groupby('animal')['age'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -339,7 +350,11 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df.loc['k'] = ['cat', 1, 2, 'yes']\n",
+    "df.tail()\n",
+    "df.drop('k')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -355,7 +370,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df['animal'].value_counts()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -371,7 +388,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df.sort_values(by=[\"age\", \"visits\"], ascending=[False, True])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -387,7 +406,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df['priority'] = df['priority'].map({'yes': True, 'no': False})\n",
+    "df['priority']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -403,7 +425,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df['animal'] = df['animal'].replace('snake', 'python')\n",
+    "df.animal"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -419,7 +444,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df.pivot_table(index='animal', columns='visits', values='age', aggfunc='mean')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1054,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -1383,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -1485,7 +1512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
